--- a/Team.html
+++ b/Team.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Team</title>
-    <link rel="stylesheet" href="css/main (team).css" media="screen">
+    <link rel="stylesheet" href="css/main.css" media="screen">
 <link rel="stylesheet" href="css/team.css" media="screen">
     <script class="u-script" type="text/javascript" src="js/jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="js/main.js" defer=""></script>
