--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <ul class="u-nav u-spacing-2 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-grey-15 u-button-style u-hover-palette-1-light-1 u-nav-link u-text-active-grey-25 u-text-body-alt-color u-text-hover-grey-30" style="padding: 10px 20px;">Home</a>
 </li><li class="u-nav-item"><a href="#about.html" class="u-active-grey-15 u-button-style u-hover-palette-1-light-1 u-nav-link u-text-active-grey-25 u-text-body-alt-color u-text-hover-grey-30" style="padding: 10px 20px;">About Us</a>
 </li><li class="u-nav-item"><a href="#campaign.html" class="u-active-grey-15 u-button-style u-hover-palette-1-light-1 u-nav-link u-text-active-grey-25 u-text-body-alt-color u-text-hover-grey-30" style="padding: 10px 20px;">Campaign</a>
-</li><li class="u-nav-item"><a href="team.html" class="u-active-grey-15 u-button-style u-hover-palette-1-light-1 u-nav-link u-text-active-grey-25 u-text-body-alt-color u-text-hover-grey-30" style="padding: 10px 20px;">Team</a>
+</li><li class="u-nav-item"><a href="Team.html" class="u-active-grey-15 u-button-style u-hover-palette-1-light-1 u-nav-link u-text-active-grey-25 u-text-body-alt-color u-text-hover-grey-30" style="padding: 10px 20px;">Team</a>
 </li><li class="u-nav-item"><a href="#blog.html" class="u-active-grey-15 u-button-style u-hover-palette-1-light-1 u-nav-link u-text-active-grey-25 u-text-body-alt-color u-text-hover-grey-30" style="padding: 10px 20px;">Blog</a>
 </li><li class="u-nav-item"><a href="#contact.html" class="u-active-grey-15 u-button-style u-hover-palette-1-light-1 u-nav-link u-text-active-grey-25 u-text-body-alt-color u-text-hover-grey-30" style="padding: 10px 20px;">Contact</a>
 </li></ul>
@@ -44,7 +44,7 @@
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" style="padding: 10px 20px;">Home</a>
 </li><li class="u-nav-item"><a href="#about.html" class="u-button-style u-nav-link" style="padding: 10px 20px;">About Us</a>
 </li><li class="u-nav-item"><a href="#campaign.html" class="u-button-style u-nav-link" style="padding: 10px 20px;">Campaign</a>
-</li><li class="u-nav-item"><a href="team.html" class="u-button-style u-nav-link" style="padding: 10px 20px;">Team</a>
+</li><li class="u-nav-item"><a href="Team.html" class="u-button-style u-nav-link" style="padding: 10px 20px;">Team</a>
 </li><li class="u-nav-item"><a href="#blog.html" class="u-button-style u-nav-link" style="padding: 10px 20px;">Blog</a>
 </li><li class="u-nav-item"><a href="#contact.html" class="u-button-style u-nav-link" style="padding: 10px 20px;">Contact</a>
 </li></ul>
