--- a/Team.html
+++ b/Team.html
@@ -6,9 +6,9 @@
     <meta name="keywords" content="GirlUp Urja, Fun Education, Our Creative Team">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Team</title>
+    <title>Our Team</title>
     <link rel="stylesheet" href="css/main.css" media="screen">
-<link rel="stylesheet" href="css/Team.css" media="screen">
+    <link rel="stylesheet" href="css/Team.css" media="screen">
     <script class="u-script" type="text/javascript" src="js/jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="js/main.js" defer=""></script>
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
