--- a/Team.html
+++ b/Team.html
@@ -49,7 +49,7 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-custom-font u-font-merriweather u-nav u-spacing-15 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-grey-30 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-hover-grey-15 u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="home.html" style="padding: 22px 20px;">index</a>
+            <ul class="u-custom-font u-font-merriweather u-nav u-spacing-15 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-grey-30 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-hover-grey-15 u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="index.html" style="padding: 22px 20px;">Home</a>
 </li><li class="u-nav-item"><a class="u-active-grey-30 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-hover-grey-15 u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" style="padding: 22px 20px;">About Us</a>
 </li><li class="u-nav-item"><a class="u-active-grey-30 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-hover-grey-15 u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" style="padding: 22px 20px;">Campaign</a>
 </li><li class="u-nav-item"><a class="u-active-grey-30 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-hover-grey-15 u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="Team.html" style="padding: 22px 20px;">Team</a>
@@ -61,7 +61,7 @@
             <div class="u-absolute-hcenter u-black u-container-style u-expanded u-inner-container-layout u-sidenav" data-offcanvas-width="150">
               <div class="u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-custom-font u-font-merriweather u-nav u-popupmenu-items u-spacing-35 u-text-active-grey-25 u-text-hover-grey-40 u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="home.html" style="padding: 22px 20px;">index</a>
+                <ul class="u-align-center u-custom-font u-font-merriweather u-nav u-popupmenu-items u-spacing-35 u-text-active-grey-25 u-text-hover-grey-40 u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="index.html" style="padding: 22px 20px;">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" style="padding: 22px 20px;">About Us</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" style="padding: 22px 20px;">Campaign</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Team.html" style="padding: 22px 20px;">Team</a>
